Resolved block container spacing issues

--- a/wp-content/themes/fr-starter-theme/resources/styles/modules/_wysiwyg.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/modules/_wysiwyg.scss
@@ -108,3 +108,12 @@
         }
     }
 }
+
+
+.wysiwyg-content{
+    p{
+        &:last-of-type{
+            margin-bottom: 0;
+        }
+    }
+}
